# fastllmtritonbackend

./: CMakeLists.txt  README.md  config.pbtxt
src/: glmbackend.cc  libtriton_glmbackend.ldscript
